# erg-zone-calculator

./: .gitignore  PRIORITY_FIXES.txt  README.md  code-review-2025-01-19.md  code-review-session.txt  index.html  pyproject.toml  requirements.txt  styles.css
.kiro/specs/static-calculator-site/: design.md  requirements.md  tasks.md
app/: pyproject.toml
app/config/: hr_zones.json  pace_zones.json
app/src/: __init__.py  constants.py
app/src/api/: models.py
app/src/domain/: domain_models.py  zone_calculators.py
app/tests/: test_models.py
improvements/: better_api.py  better_types.py  config_management.py  dependency_injection.py  domain_models.py  exceptions.py  integration_layer.py  optimized_config.py  production_api.py  property_tests.py
infra/: app.py  cdk.json  lambda_handler.py  pyproject.toml
infra/infra/: infra_stack.py
infra/src/: constants.py  infra_stack.py  lambda_handler.py  origin_S3_bucket.py
issues/: CLAUDE.md  CODE_REVIEW_TODO.md  code-review-2025-01-19.md  improvement-suggestions.md
src/: __init__.py  app.py  calculate_hr_zones.py  calculate_pace_zones.py  lambda_handler.py  main.py  models.py  zone_calculators.py  zone_configs.py  zone_formatters.py
src/api/: app.py  models.py
src/domain/: constants.py  domain_models.py  zone_calculators.py  zone_configs.py  zone_formatters.py
test/: test_calculate_pace_zones.py
test/fixtures/: invalid_pace_zones.json
tests/: conftest.py  test_api_integration.py  test_domain_models.py  test_models.py  test_zone_calculators.py  test_zone_configs.py  test_zone_formatters.py
(+6 files in other folders)
