[project]
name = "erg-zone-calculator"
version = "0.1.0"
description = "A simple calculator for calculating intensity zones on the ergometer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
]

[dependency-groups]
dev = [
    "ty>=0.0.1a14",
]
