[project]
name = "erg-zone-calculator"
version = "0.1.0"
description = "A simple calculator for calculating intensity zones on the ergometer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.116.1",
  "httpx>=0.28.1",
  "magnum>=20.0.0",
  "pydantic>=2.11.7",
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
  "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "ty>=0.0.1a14",
]
